alignement des images issues de wordpress

--- a/css/theme.css
+++ b/css/theme.css
@@ -71,18 +71,23 @@ tbody.comparatif td {
     border-color:black;
 }
 
-img.left {
+img.left,
+img.alignleft {
     display: inline;
     float: left;
+    padding-right: 10px;
 }
 
-img.right {
+img.right,
+img.alignright {
     display: inline;
     float: right;
+    padding-left: 10px;
 }
 
-img.center {
+img.center,
+img.aligncenter {
     display: block;
-    margin-left: auto; 
+    margin-left: auto;
     margin-right: auto;
 }
